rebuild property system with generic Property